--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -65,22 +65,158 @@
 }
 
 ::ng-deep mat-button-toggle {
-  @apply rounded-xl overflow-hidden;
+    @apply rounded-xl overflow-hidden;
 }
 
 ::ng-deep mat-button-toggle button.mat-button-toggle-button {
-  @apply text-center flex items-center justify-center
-         flex-grow-0 flex-shrink-0 
-         w-full md:w-auto
-         rounded-xl px-4 py-2
-         border-2 border-emerald-500 text-emerald-600
-         transition-all duration-200 bg-white;
+    @apply text-center flex items-center justify-center flex-grow-0 flex-shrink-0 w-full md:w-auto rounded-xl px-4 py-2 border-2 border-emerald-500 text-emerald-600 transition-all duration-200 bg-white;
 }
 
 ::ng-deep mat-button-toggle:not(.mat-button-toggle-checked) button.mat-button-toggle-button {
-  @apply bg-white hover:bg-emerald-50;
+    @apply bg-white hover:bg-emerald-50;
 }
 
 ::ng-deep mat-button-toggle.mat-button-toggle-checked button.mat-button-toggle-button {
-  @apply bg-emerald-100 text-emerald-800;
+    @apply bg-emerald-100 text-emerald-800;
+}
+
+.no-scrollbar::-webkit-scrollbar {
+    display: none;
+}
+
+.no-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+
+/* From Uiverse.io by chase2k25 */
+.glass-radio-group {
+    --bg: rgba(255, 255, 255, 0.06);
+    --text: #363434;
+
+    display: flex;
+    flex-wrap: wrap;
+    /* permite que brinque a siguiente fila */
+    position: relative;
+    background: var(--bg);
+    border-radius: 1rem;
+    backdrop-filter: blur(12px);
+    box-shadow:
+        inset 1px 1px 4px rgba(255, 255, 255, 0.2),
+        inset -1px -1px 6px rgba(0, 0, 0, 0.3),
+        0 4px 12px rgba(0, 0, 0, 0.15);
+    overflow: hidden;
+    width: 95%;
+    max-width: 600px;
+    margin: auto;
+}
+
+
+.glass-radio-group input {
+    display: none;
+}
+
+.glass-radio-group label {
+    flex: 1 1 20%;
+    min-width: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 12px;
+    padding: 0.8rem 1.6rem;
+    cursor: pointer;
+    font-weight: 600;
+    color: var(--text);
+    position: relative;
+    z-index: 2;
+    transition: all 0.3s ease-in-out;
+    text-align: center;
+    
+}
+
+.glass-radio-group label:not(:last-of-type)::after {
+  content: "";
+  position: absolute;
+  top: 20%;
+  right: 0;
+  height: 60%;
+  width: 1px;
+  background-color: rgba(0, 0, 0, 0.80); /* línea sutil tipo glass */
+}
+
+@media (min-width: 500px) {
+    .glass-radio-group label {
+        flex: 1 1 33.33%;
+    }
+}
+
+@media (min-width: 768px) {
+    .glass-radio-group label {
+        flex: 1 1 20%;
+    }
+}
+
+.glass-radio-group label:hover {
+    color: rgb(19, 63, 1);
+}
+
+.glass-radio-group input:checked+label {
+    color: #ffffff;
+}
+
+.glass-glider {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: calc(100% / 5);
+    border-radius: 1rem;
+    z-index: 1;
+    transition:
+        transform 0.5s cubic-bezier(0.37, 1.95, 0.66, 0.56),
+        background 0.4s ease-in-out,
+        box-shadow 0.4s ease-in-out;
+}
+
+/* Silver */
+#glass-mazatlan:checked~.glass-glider {
+    transform: translateX(0%);
+    background: linear-gradient(135deg, #c0c0c055, #1b5a02);
+    box-shadow:
+        0 0 18px rgba(192, 192, 192, 0.5),
+        0 0 10px rgba(255, 255, 255, 0.4) inset;
+}
+
+/* Gold */
+#glass-cancun:checked~.glass-glider {
+    transform: translateX(100%);
+    background: linear-gradient(135deg, #c0c0c055, #1b5a02);
+    box-shadow:
+        0 0 18px rgba(192, 192, 192, 0.5),
+        0 0 10px rgba(255, 255, 255, 0.4) inset;
+}
+
+/* Platinum */
+#glass-cabos:checked~.glass-glider {
+    transform: translateX(200%);
+    background: linear-gradient(135deg, #c0c0c055, #1b5a02);
+    box-shadow:
+        0 0 18px rgba(192, 192, 192, 0.5),
+        0 0 10px rgba(255, 255, 255, 0.4) inset;
+}
+
+#glass-vallarta:checked~.glass-glider {
+    transform: translateX(300%);
+    background: linear-gradient(135deg, #c0c0c055, #1b5a02);
+    box-shadow:
+        0 0 18px rgba(192, 192, 192, 0.5),
+        0 0 10px rgba(255, 255, 255, 0.4) inset;
+}
+
+/* Platinum */
+#glass-rivera:checked~.glass-glider {
+    transform: translateX(400%);
+    background: linear-gradient(135deg, #c0c0c055, #1b5a02);
+    box-shadow:
+        0 0 18px rgba(192, 192, 192, 0.5),
+        0 0 10px rgba(255, 255, 255, 0.4) inset;
 }
