--- a/src/app/text-typewriter.component.html
+++ b/src/app/text-typewriter.component.html
@@ -1,8 +1,8 @@
 <div class="inline-block text-3xl font-bold text-center">
-  <span class="text-green-700 dark:text-green-400">{{ displayedText }}</span>
+  <span class="text-blue-700 dark:text-blue-400">{{ displayedText }}</span>
   <span
     *ngIf="showCursor"
-    class="ml-1 animate-blink text-green-700 dark:text-green-400"
+    class="ml-1 animate-blink text-blue-700 dark:text-blue-400"
     >{{ cursorCharacter }}</span
   >
 </div>
