--- a/src/app/layout/layouts/horizontal/material/material.component.html
+++ b/src/app/layout/layouts/horizontal/material/material.component.html
@@ -39,19 +39,17 @@
     </div>
 
     <!-- Footer -->
-    <div class="relative z-49 flex w-full justify-center print:hidden">
+    <!-- <div class="relative z-49 flex w-full justify-center print:hidden">
         <div
             class="bg-card flex h-14 w-full max-w-360 items-center border-t px-6 dark:bg-default sm:h-20 sm:shadow-xl md:px-8 justify-between">
             <span class="text-secondary font-medium">Trotapie &copy; {{ currentYear }}</span>
             <div class="flex gap-3 items-center text-secondary">
-                <!-- X (Twitter) -->
                 <a href="https://x.com/trotapie" target="_blank" aria-label="X">
                     <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="none" viewBox="0 0 1200 1227">
                         <path fill="#000"
                             d="M714.163 519.284 1160.89 0h-105.86L667.137 450.887 357.328 0H0l468.492 681.821L0 1226.37h105.866l409.625-476.152 327.181 476.152H1200L714.137 519.284h.026ZM569.165 687.828l-47.468-67.894-377.686-540.24h162.604l304.797 435.991 47.468 67.894 396.2 566.721H892.476L569.165 687.854v-.026Z" />
                     </svg>
                 </a>
-                <!-- YouTube -->
                 <a href="https://youtube.com/@trotapie" target="_blank" aria-label="YouTube">
                     <svg viewBox="0 0 256 180" width="30" height="30" xmlns="http://www.w3.org/2000/svg"
                         preserveAspectRatio="xMidYMid">
@@ -61,7 +59,6 @@
                         <path fill="#FFF" d="m102.421 128.06 66.328-38.418-66.328-38.418z" />
                     </svg>
                 </a>
-                <!-- Instagram -->
                 <a href="https://instagram.com/trotapie" target="_blank" aria-label="Instagram">
                     <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="40" height="40" viewBox="0 0 48 48">
                         <path fill="#304ffe"
@@ -125,7 +122,6 @@
                         </g>
                     </svg>
                 </a>
-                <!-- Facebook -->
                 <a href="https://facebook.com/trotapie" target="_blank" aria-label="Facebook">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 36 36" fill="url(#facebook__a)" height="30"
                         width="30">
@@ -141,7 +137,6 @@
                             d="m25 23 .8-5H21v-3.5c0-1.4.5-2.5 2.7-2.5H26V7.4c-1.3-.2-2.7-.4-4-.4-4.1 0-7 2.5-7 7v4h-4.5v5H15v12.7c1 .2 2 .3 3 .3s2-.1 3-.3V23h4z" />
                     </svg>
                 </a>
-                <!-- TikTok -->
                 <a href="https://www.tiktok.com/@trotapie" target="_blank" aria-label="TikTok">
                     <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="40" height="40" viewBox="0 0 48 48">
                         <path fill="#212121" fill-rule="evenodd"
@@ -162,5 +157,5 @@
 
         </div>
 
-    </div>
+    </div> -->
 </div>
