--- a/src/app/components/hoteles/hoteles.component.html
+++ b/src/app/components/hoteles/hoteles.component.html
@@ -115,7 +115,7 @@
                 <div
                     class="sticky top-0 z-30 flex items-center justify-center bg-blue-100 shadow py-2 transition duration-300 min-h-15">
                     <!-- <h2 class="text-center text-blue-600 font-bold text-lg">Destinos Internacionales</h2> -->
-                    <app-text-typewriter [text]="['Destinos Internacionales próximamentee']" [typingSpeed]="80"
+                    <app-text-typewriter class="text-blue-700 dark:text-blue-400" [text]="['Destinos Internacionales próximamente']" [typingSpeed]="80"
                         [pauseDuration]="1800" [deletingSpeed]="40" [loop]="true" [showCursor]="true"
                         cursorCharacter="|"></app-text-typewriter>
                 </div>
