--- a/src/app/components/hoteles/hoteles.component.html
+++ b/src/app/components/hoteles/hoteles.component.html
@@ -1,7 +1,7 @@
 <div #scrollContainer class="absolute inset-0 flex flex-col min-w-0 overflow-y-auto" cdkScrollable>
     <div class="-mt-px flex-auto border-t ">
         <div class="mx-auto w-full max-w-screen-xl">
-            <section class="relative">
+            <section #anclaNacionales class="relative">
                 <div class="sticky top-0 z-30 bg-green-50 shadow py-2 transition duration-300">
                     <h2 class="text-center text-green-800 font-bold text-2xl">Destinos Nacionales</h2>
                     <div class="flex flex-col gap-2">
@@ -31,6 +31,12 @@
                                     <label for="glass-rivera">Rivera Maya</label>
 
                                     <div class="glass-glider"></div>
+                                </div>
+                                <div class="flex justify-center mt-4 mb-2 ml-2">
+                                    <button mat-flat-button type="button" color="accent" class="mr-2" (click)="irA()">
+                                        <mat-icon class="mr-2" svgIcon="mat_outline:airplanemode_active"></mat-icon>
+                                        Destinos internacionales
+                                    </button>
                                 </div>
                             </div>
                         </form>
@@ -111,16 +117,87 @@
                 </div>
             </section>
 
-            <section class="relative">
+            <section #ancla class="relative">
                 <div
                     class="sticky top-0 z-30 flex items-center justify-center bg-blue-100 shadow py-2 transition duration-300 min-h-15">
-                    <!-- <h2 class="text-center text-blue-600 font-bold text-lg">Destinos Internacionales</h2> -->
-                    <app-text-typewriter class="text-blue-700 dark:text-blue-400" [text]="['Destinos Internacionales próximamente']" [typingSpeed]="80"
-                        [pauseDuration]="1800" [deletingSpeed]="40" [loop]="true" [showCursor]="true"
+                    <app-text-typewriter class="text-blue-700 dark:text-blue-400"
+                        [text]="['Destinos Internacionales próximamente']" [typingSpeed]="80" [pauseDuration]="1800"
+                        [deletingSpeed]="40" [loop]="true" [showCursor]="true"
                         cursorCharacter="|"></app-text-typewriter>
+                    <div class="flex justify-center mt-4 mb-2 ml-2">
+                        <button mat-flat-button type="button" color="accent" class="mr-2" (click)="irANacionales()">
+                            <mat-icon class="mr-2" svgIcon="mat_outline:airplanemode_active"></mat-icon>
+                            Destinos Nacionales
+                        </button>
+                    </div>
                 </div>
+                <div class="flex min-w-0 flex-auto flex-col mt-6">
+                    <div class="flex-auto p-3 sm:p-5">
 
+                        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 p-6">
+                            <div *ngIf="hotelesPorCiudad.length === 0 && ciudadSeleccionada"
+                                class="text-center text-red-500/80 text-lg mt-8 justify-center">
+                                No hay hoteles disponibles para esta ciudad.
+                            </div>
+                            <div *ngFor="let hotel of hotelesPorCiudad">
 
+                                <fuse-card
+                                    class="cursor-pointer filter-listing relative flex w-full h-48 flex-col bg-cover bg-center text-white rounded-2xl overflow-hidden transition duration-200 hover:scale-105 card-animada"
+                                    [ngStyle]="{ 'background-image': 'url(' + (hotel.fondo || fallback) + ')' }"
+                                    (click)="verDetalleHotel(hotel)">
+
+                                    <div class="absolute inset-0 bg-black/40 z-0"></div>
+                                    <div *ngIf="hotel?.descripcion?.descuento" class="absolute top-2 right-2 z-20">
+                                        <div [ngClass]="getDescuentoClass(hotel)" class="text-xs font-bold px-2 py-1">
+                                            {{ hotel?.descripcion?.descuento }}% descuento
+                                        </div>
+                                    </div>
+
+                                    <div class="relative z-10 m-8 mb-4">
+                                        <div class="text-2xl font-semibold leading-tight">{{ hotel.nombre }}</div>
+
+                                        <div class="-ml-1 mt-2 flex items-center leading-none">
+                                            <div class="flex items-center">
+                                                <ng-container
+                                                    *ngFor="let _ of getFullStars(hotel?.descripcion?.estrellas)">
+                                                    <mat-icon class="text-yellow-400 icon-size-5"
+                                                        [svgIcon]="'mat_outline:star'"></mat-icon>
+                                                </ng-container>
+                                                <ng-container *ngIf="hasHalfStar(hotel?.descripcion?.estrellas)">
+                                                    <mat-icon class="text-yellow-400 icon-size-5"
+                                                        [svgIcon]="'mat_outline:star_half'"></mat-icon>
+                                                </ng-container>
+                                                <ng-container
+                                                    *ngFor="let _ of getEmptyStars(hotel?.descripcion?.estrellas)">
+                                                    <mat-icon class="text-yellow-400 icon-size-5"
+                                                        [svgIcon]="'mat_outline:star_outline'"></mat-icon>
+                                                </ng-container>
+                                            </div>
+                                            <div class="ml-2">{{ hotel?.descripcion?.estrellas }}</div>
+                                        </div>
+                                        <div class="w-3/5">
+
+                                            {{hotel?.descripcion?.regimenPrincipal}}
+                                        </div>
+                                    </div>
+
+                                    <div class="absolute bottom-4 right-2 z-20 flex items-center gap-2">
+                                        <div class="text-sm text-right leading-tight">
+                                            <div>Ver</div>
+                                            <div>Galería</div>
+                                        </div>
+
+                                        <div
+                                            class="w-10 h-10 rounded-full text-white flex items-center justify-center shadow-md">
+                                            <mat-icon [svgIcon]="'heroicons_outline:arrow-right-circle'"
+                                                class="text-white w-6 h-6"></mat-icon>
+                                        </div>
+                                    </div>
+                                </fuse-card>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </section>
         </div>
 
@@ -132,7 +209,8 @@
                 <span class="text-secondary font-medium">Trotapie &copy; {{ currentYear }}</span>
                 <div class="flex gap-3 items-center text-secondary">
                     <a href="https://x.com/trotapie" target="_blank" aria-label="X">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="none" viewBox="0 0 1200 1227">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="none"
+                            viewBox="0 0 1200 1227">
                             <path fill="#000"
                                 d="M714.163 519.284 1160.89 0h-105.86L667.137 450.887 357.328 0H0l468.492 681.821L0 1226.37h105.866l409.625-476.152 327.181 476.152H1200L714.137 519.284h.026ZM569.165 687.828l-47.468-67.894-377.686-540.24h162.604l304.797 435.991 47.468 67.894 396.2 566.721H892.476L569.165 687.854v-.026Z" />
                         </svg>
@@ -147,7 +225,8 @@
                         </svg>
                     </a>
                     <a href="https://instagram.com/trotapie" target="_blank" aria-label="Instagram">
-                        <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="40" height="40" viewBox="0 0 48 48">
+                        <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="40" height="40"
+                            viewBox="0 0 48 48">
                             <path fill="#304ffe"
                                 d="M41.67,13.48c-0.4,0.26-0.97,0.5-1.21,0.77c-0.09,0.09-0.14,0.19-0.12,0.29v1.03l-0.3,1.01l-0.3,1l-0.33,1.1 l-0.68,2.25l-0.66,2.22l-0.5,1.67c0,0.26-0.01,0.52-0.03,0.77c-0.07,0.96-0.27,1.88-0.59,2.74c-0.19,0.53-0.42,1.04-0.7,1.52 c-0.1,0.19-0.22,0.38-0.34,0.56c-0.4,0.63-0.88,1.21-1.41,1.72c-0.41,0.41-0.86,0.79-1.35,1.11c0,0,0,0-0.01,0 c-0.08,0.07-0.17,0.13-0.27,0.18c-0.31,0.21-0.64,0.39-0.98,0.55c-0.23,0.12-0.46,0.22-0.7,0.31c-0.05,0.03-0.11,0.05-0.16,0.07 c-0.57,0.27-1.23,0.45-1.89,0.54c-0.04,0.01-0.07,0.01-0.11,0.02c-0.4,0.07-0.79,0.13-1.19,0.16c-0.18,0.02-0.37,0.03-0.55,0.03 l-0.71-0.04l-3.42-0.18c0-0.01-0.01,0-0.01,0l-1.72-0.09c-0.13,0-0.27,0-0.4-0.01c-0.54-0.02-1.06-0.08-1.58-0.19 c-0.01,0-0.01,0-0.01,0c-0.95-0.18-1.86-0.5-2.71-0.93c-0.47-0.24-0.93-0.51-1.36-0.82c-0.18-0.13-0.35-0.27-0.52-0.42 c-0.48-0.4-0.91-0.83-1.31-1.27c-0.06-0.06-0.11-0.12-0.16-0.18c-0.06-0.06-0.12-0.13-0.17-0.19c-0.38-0.48-0.7-0.97-0.96-1.49 c-0.24-0.46-0.43-0.95-0.58-1.49c-0.06-0.19-0.11-0.37-0.15-0.57c-0.01-0.01-0.02-0.03-0.02-0.05c-0.1-0.41-0.19-0.84-0.24-1.27 c-0.06-0.33-0.09-0.66-0.09-1c-0.02-0.13-0.02-0.27-0.02-0.4l1.91-2.95l1.87-2.88l0.85-1.31l0.77-1.18l0.26-0.41v-1.03 c0.02-0.23,0.03-0.47,0.02-0.69c-0.01-0.7-0.15-1.38-0.38-2.03c-0.22-0.69-0.53-1.34-0.85-1.94c-0.38-0.69-0.78-1.31-1.11-1.87 C14,7.4,13.66,6.73,13.75,6.26C14.47,6.09,15.23,6,16,6h16c4.18,0,7.78,2.6,9.27,6.26C41.43,12.65,41.57,13.06,41.67,13.48z">
                             </path>
@@ -225,7 +304,8 @@
                         </svg>
                     </a>
                     <a href="https://www.tiktok.com/@trotapie" target="_blank" aria-label="TikTok">
-                        <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="40" height="40" viewBox="0 0 48 48">
+                        <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="40" height="40"
+                            viewBox="0 0 48 48">
                             <path fill="#212121" fill-rule="evenodd"
                                 d="M10.904,6h26.191C39.804,6,42,8.196,42,10.904v26.191 C42,39.804,39.804,42,37.096,42H10.904C8.196,42,6,39.804,6,37.096V10.904C6,8.196,8.196,6,10.904,6z"
                                 clip-rule="evenodd"></path>
@@ -241,9 +321,9 @@
                         </svg>
                     </a>
                 </div>
-    
+
             </div>
-    
+
         </div>
     </footer>
 </div>
