NO Mostrar contenido internacional

--- a/src/app/components/hoteles/hoteles.component.html
+++ b/src/app/components/hoteles/hoteles.component.html
@@ -118,84 +118,19 @@
             </section>
 
             <section #ancla class="relative">
-                <div
-                    class="sticky top-0 z-30 flex items-center justify-center bg-blue-100 shadow py-2 transition duration-300 min-h-15">
-                    <app-text-typewriter class="text-blue-700 dark:text-blue-400"
-                        [text]="['Destinos Internacionales próximamente']" [typingSpeed]="80" [pauseDuration]="1800"
-                        [deletingSpeed]="40" [loop]="true" [showCursor]="true"
-                        cursorCharacter="|"></app-text-typewriter>
+                <div class="sticky top-0 z-30 bg-blue-100 shadow py-2 transition duration-300">
+                    <div class="flex items-center justify-center">
+                        <app-text-typewriter class="text-blue-700 text-center dark:text-blue-400"
+                            [text]="['Destinos Internacionales próximamente']" [typingSpeed]="80" [pauseDuration]="1800"
+                            [deletingSpeed]="40" [loop]="true" [showCursor]="true"
+                            cursorCharacter="|"></app-text-typewriter>
+                    </div>
+
                     <div class="flex justify-center mt-4 mb-2 ml-2">
                         <button mat-flat-button type="button" color="accent" class="mr-2" (click)="irANacionales()">
                             <mat-icon class="mr-2" svgIcon="mat_outline:airplanemode_active"></mat-icon>
                             Destinos Nacionales
                         </button>
-                    </div>
-                </div>
-                <div class="flex min-w-0 flex-auto flex-col mt-6">
-                    <div class="flex-auto p-3 sm:p-5">
-
-                        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 p-6">
-                            <div *ngIf="hotelesPorCiudad.length === 0 && ciudadSeleccionada"
-                                class="text-center text-red-500/80 text-lg mt-8 justify-center">
-                                No hay hoteles disponibles para esta ciudad.
-                            </div>
-                            <div *ngFor="let hotel of hotelesPorCiudad">
-
-                                <fuse-card
-                                    class="cursor-pointer filter-listing relative flex w-full h-48 flex-col bg-cover bg-center text-white rounded-2xl overflow-hidden transition duration-200 hover:scale-105 card-animada"
-                                    [ngStyle]="{ 'background-image': 'url(' + (hotel.fondo || fallback) + ')' }"
-                                    (click)="verDetalleHotel(hotel)">
-
-                                    <div class="absolute inset-0 bg-black/40 z-0"></div>
-                                    <div *ngIf="hotel?.descripcion?.descuento" class="absolute top-2 right-2 z-20">
-                                        <div [ngClass]="getDescuentoClass(hotel)" class="text-xs font-bold px-2 py-1">
-                                            {{ hotel?.descripcion?.descuento }}% descuento
-                                        </div>
-                                    </div>
-
-                                    <div class="relative z-10 m-8 mb-4">
-                                        <div class="text-2xl font-semibold leading-tight">{{ hotel.nombre }}</div>
-
-                                        <div class="-ml-1 mt-2 flex items-center leading-none">
-                                            <div class="flex items-center">
-                                                <ng-container
-                                                    *ngFor="let _ of getFullStars(hotel?.descripcion?.estrellas)">
-                                                    <mat-icon class="text-yellow-400 icon-size-5"
-                                                        [svgIcon]="'mat_outline:star'"></mat-icon>
-                                                </ng-container>
-                                                <ng-container *ngIf="hasHalfStar(hotel?.descripcion?.estrellas)">
-                                                    <mat-icon class="text-yellow-400 icon-size-5"
-                                                        [svgIcon]="'mat_outline:star_half'"></mat-icon>
-                                                </ng-container>
-                                                <ng-container
-                                                    *ngFor="let _ of getEmptyStars(hotel?.descripcion?.estrellas)">
-                                                    <mat-icon class="text-yellow-400 icon-size-5"
-                                                        [svgIcon]="'mat_outline:star_outline'"></mat-icon>
-                                                </ng-container>
-                                            </div>
-                                            <div class="ml-2">{{ hotel?.descripcion?.estrellas }}</div>
-                                        </div>
-                                        <div class="w-3/5">
-
-                                            {{hotel?.descripcion?.regimenPrincipal}}
-                                        </div>
-                                    </div>
-
-                                    <div class="absolute bottom-4 right-2 z-20 flex items-center gap-2">
-                                        <div class="text-sm text-right leading-tight">
-                                            <div>Ver</div>
-                                            <div>Galería</div>
-                                        </div>
-
-                                        <div
-                                            class="w-10 h-10 rounded-full text-white flex items-center justify-center shadow-md">
-                                            <mat-icon [svgIcon]="'heroicons_outline:arrow-right-circle'"
-                                                class="text-white w-6 h-6"></mat-icon>
-                                        </div>
-                                    </div>
-                                </fuse-card>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </section>
